# trace-export-csv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trace_export_csv/: __init__.py  __main__.py  core.py
src/trace_export_csv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_export_csv.py
